--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 .cabecalho {
-    background-color: #424E61;
+    background-color: #0f2953;
     color: white;
     display: flex;
     justify-content: space-around;
@@ -13,7 +13,7 @@
 }
 
 .cabecalho-imagem{
-    width: 20%;
+    width: 7%;
 }
 
 .cabecalho-lista-item{
